# vinyl

./: .gitignore  README.md  THANKS  keyboard-poc.vala  meson.build  post_install.py
data/: gamecontrollerdb.txt  io.github.libredeb.vinyl.1  io.github.libredeb.vinyl.desktop  io.github.libredeb.vinyl.gresources.xml  io.github.libredeb.vinyl.metainfo.xml.in  radios.ini
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  io.github.libredeb.vinyl.pot  it.po  meson.build  pt.po
src/: Application.vala  Constants.vala  Main.vala  Player.vala
src/Radio/: RadioPlayer.vala  RadioStation.vala
src/Utils/: Drawing.vala  Screen.vala
src/Widgets/: CategoryList.vala  IconButton.vala  MenuButton.vala  NowPlaying.vala  OnScreenKeyboard.vala  PlayerControls.vala  RadioNowPlaying.vala  RadioStationList.vala  RadioStationRow.vala  ToolbarButton.vala  Track.vala  TrackList.vala
vapi/: config.vapi
